src/test/ui/constructor-lifetime-args.stderr
error[E0107]: wrong number of lifetime arguments: expected 2, found 1
  --> $DIR/constructor-lifetime-args.rs:18:5
   |
LL |     S::<'static>(&0, &0);
   |     ^^^^^^^^^^^^ expected 2 lifetime arguments

error[E0107]: wrong number of lifetime arguments: expected 2, found 3
  --> $DIR/constructor-lifetime-args.rs:20:27
   |
LL |     S::<'static, 'static, 'static>(&0, &0);
   |                           ^^^^^^^ unexpected lifetime argument

error: type parameter on variant
  --> $DIR/constructor-lifetime-args.rs:23:11
   |
LL |     E::V::<'static>(&0);
   |           ^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/constructor-lifetime-args.rs:1:9
   |
LL | #![deny(type_param_on_variant_ctor)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: set the type parameter on the enum
   |
LL |     E::<'static>::V(&0);
   |      ^^^^^^^^^^^  --

error[E0107]: wrong number of lifetime arguments: expected 2, found 1
  --> $DIR/constructor-lifetime-args.rs:23:5
   |
LL |     E::V::<'static>(&0);
   |     ^^^^^^^^^^^^^^^ expected 2 lifetime arguments

error: type parameter on variant
  --> $DIR/constructor-lifetime-args.rs:26:11
   |
LL |     E::V::<'static, 'static, 'static>(&0);
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: set the type parameter on the enum
   |
LL |     E::<'static, 'static, 'static>::V(&0);
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  --

error[E0107]: wrong number of lifetime arguments: expected 2, found 3
  --> $DIR/constructor-lifetime-args.rs:26:30
   |
LL |     E::V::<'static, 'static, 'static>(&0);
   |                              ^^^^^^^ unexpected lifetime argument

error[E0107]: wrong number of lifetime arguments: expected 2, found 1
  --> $DIR/constructor-lifetime-args.rs:29:5
   |
LL |     E::<'static>::V(&0);
   |     ^^^^^^^^^^^^^^^ expected 2 lifetime arguments

error[E0107]: wrong number of lifetime arguments: expected 2, found 3
  --> $DIR/constructor-lifetime-args.rs:31:27
   |
LL |     E::<'static, 'static, 'static>::V(&0);
   |                           ^^^^^^^ unexpected lifetime argument

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0107`.
